<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="24dp"
    tools:context=".fragment.LoginFragment">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auth_title_sign_in"
        android:theme="@style/TitleText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline1" />

    <TextView
        android:id="@+id/subTitleText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/auth_sub_title"
        android:textAlignment="textStart"
        android:theme="@style/SubTitleText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleText" />

    <EditText
        android:id="@+id/emailEditText"
        style="@style/EditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/email_input_hint"
        android:textColorHint="@color/hintColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline2"
        android:inputType="textEmailAddress"/>


    <EditText
        android:id="@+id/passwordEditText"
        style="@style/EditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/password_input_hint"
        android:textColorHint="@color/hintColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailEditText"
        android:inputType="textPassword"
        android:layout_marginTop="12dp"/>

    <ImageView
        android:id="@+id/eyeBtn"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/eye_close"
        app:tint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/passwordEditText"
        app:layout_constraintBottom_toBottomOf="@+id/passwordEditText"
        app:layout_constraintTop_toTopOf="@+id/passwordEditText"
        android:layout_marginEnd="24dp"/>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/checkboxRememberMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
        app:layout_constraintStart_toStartOf="@+id/passwordEditText"
        android:text="@string/auth_checkbox_text"
        style="@style/CheckBoxStyle"/>

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
        app:layout_constraintBottom_toBottomOf="@+id/checkboxRememberMe"
        app:layout_constraintEnd_toEndOf="@+id/passwordEditText"
        android:text="@string/auth_forgot_password"
        style="@style/SecondaryText"/>


    <TextView
        android:id="@+id/signInButton"
        style="@style/majorButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/auth_butt_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline3"/>

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/signInButton"
    android:layout_marginTop="12dp"
    android:orientation="horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_account_title"
        android:textColor="@color/hintColor"
        android:textSize="15sp"
        />

    <View
        android:layout_width="6dp"
        android:layout_height="match_parent"/>

    <TextView
        android:id="@+id/signUpText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_butt_text"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"/>

</LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.06" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.52" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />


</androidx.constraintlayout.widget.ConstraintLayout>