<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="24dp"
    tools:context=".fragment.LoginFragment">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auth_title_sign_up"
        android:theme="@style/TitleText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline1" />

    <TextView
        android:id="@+id/subTitleText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/register_sub_title"
        android:textAlignment="textStart"
        android:theme="@style/SubTitleText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleText" />

    <EditText
        android:id="@+id/userNameEditText"
        style="@style/EditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/username_input_hint"
        android:textColorHint="@color/hintColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline2"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/emailEditText"
        style="@style/EditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/email_input_hint"
        android:textColorHint="@color/hintColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userNameEditText"
        android:layout_marginTop="12dp"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/passwordEditText"
        style="@style/EditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/password_input_hint"
        android:textColorHint="@color/hintColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailEditText"
        android:layout_marginTop="12dp"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/repeatPasswordEditText"
        style="@style/EditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/repeat_password_input_hint"
        android:textColorHint="@color/hintColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordEditText"
        android:layout_marginTop="12dp"
        android:inputType="textPassword"/>

    <ImageView
        android:id="@+id/eyeBtnPassword"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/eye_close"
        app:tint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/passwordEditText"
        app:layout_constraintBottom_toBottomOf="@+id/passwordEditText"
        app:layout_constraintTop_toTopOf="@+id/passwordEditText"
        android:layout_marginEnd="24dp"/>

    <ImageView
        android:id="@+id/eyeBtnRepeatPassword"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/eye_close"
        app:tint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/repeatPasswordEditText"
        app:layout_constraintBottom_toBottomOf="@+id/repeatPasswordEditText"
        app:layout_constraintTop_toTopOf="@+id/repeatPasswordEditText"
        android:layout_marginEnd="24dp"/>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/checkboxAgreeTermsConditions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/signUpButton"
        app:layout_constraintStart_toStartOf="@+id/signUpButton"
        app:layout_constraintEnd_toEndOf="@+id/signUpButton"
        android:text="@string/privacy_policy"
        style="@style/CheckBoxStyle"
        android:paddingHorizontal="12dp"
        android:layout_marginBottom="8dp"/>


    <TextView
        android:id="@+id/signUpButton"
        style="@style/majorButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/register_butt_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline3"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpButton"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes_account_title"
            android:textColor="@color/hintColor"
            android:textSize="15sp"
            />

        <View
            android:layout_width="6dp"
            android:layout_height="match_parent"/>

        <TextView
            android:id="@+id/signInText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/auth_butt_text"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"/>

    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.06" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.32" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.81" />


</androidx.constraintlayout.widget.ConstraintLayout>